--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.7.3"
 
 [libraries]
+# cxx = { module = "org.lsposed.libcxx:libcxx", version = "27.0.12077973" }
 
 [plugins]
 android-library = { id = "com.android.library", version.ref = "agp" }
